@@ -1,3 +1,12 @@
+Unreleased
+----------
+
+- webhelpers2.html.tools
+
+  * Bugfixes:
+
+    + Properly escape the string passed to ``js_obfuscate``.
+
 2.0rc1 (2014-09-22)
 -------------------
 
